--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,10 @@ code {
     monospace;
 }
 
-h1 {
-    position: absolute;
-    z-index: 10;
-    left: 1rem;
-    top: 1rem;
-    margin:0;
-    padding:0;
+.app {
+    display: flex;
+    flex-direction:row;
 }
-
 .locate {
     position: absolute;
     top: 1rem;
@@ -36,19 +31,67 @@ h1 {
     cursor:pointer;
 }
 
-.search {
-    position: absolute;
-    left: 1rem;
-    top: 5rem;
-    width: 100%;
+.panel {
     max-width: 250px;
+    height: 100vh;
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+}
+
+h1 {
+    z-index: 10;
+    left: 1rem;
+    top: 1rem;
+    margin: 0;
+    padding: 0;
+}
+
+.search {
+    width: 100%;
+    z-index: 100;
 }
 
     .search input {
         padding: 0.5rem;
         font-size: 1.5rem;
         background-color: #D5D8DC;
-        width: 100%;
+        width: calc(100% - 2rem - 4px);
+    }
+
+.cardList {
+    overflow-y: scroll;
+    max-height: calc(100vh - 100px);
+    width: 250px;
+    /*width: 100%;*/
+    /*max-width: 250px;*/
+    z-index: 10;
+    background-color: transparent;
+}
+
+.card {
+    width: calc(100%-50px);
+    height: 50px;
+    padding-left: 0.5rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #D5D8DC;
+    margin: 5px 0;
+    color: black;
+    cursor: grab;
+}
+
+.removeMaker {
+    right: 0.5rem;
+    background: none;
+    border: none;
+    z-index: 10;
+}
+
+
+    .removeMaker img {
+        width: 30px;
+        cursor: pointer;
     }
 
