--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #55575E;
 }
 
 code {
@@ -16,6 +15,7 @@ code {
     display: flex;
     flex-direction:row;
 }
+
 .locate {
     position: absolute;
     top: 1rem;
@@ -24,74 +24,168 @@ code {
     border: 1px solid black;
     border-radius: 8px;
     z-index: 10;
+    height: 50px;
 }
 
-.locate img {
-    width:30px;
-    cursor:pointer;
-}
+    .locate img {
+        width: 40px;
+        cursor: pointer;
+    }
 
 .panel {
+
     max-width: 250px;
+    min-width: 250px;
     height: 100vh;
-    z-index: 10;
+    /*z-index: 10;*/
     display: flex;
     flex-direction: column;
+    background-color: #EFEFEF;
 }
 
 h1 {
-    z-index: 10;
+    /*z-index: 10;*/
     left: 1rem;
     top: 1rem;
     margin: 0;
     padding: 0;
 }
 
+.headerText {
+    margin-left: 10px;
+    margin-right: 10px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+}
+
+.headerText h1 {
+    display: inline;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: right;
+}
+
+.headerText img {
+    width: 36px;
+}
+
 .search {
+    left: 1rem;
+    top: 5rem;
     width: 100%;
-    z-index: 100;
+    max-width: 240px;
+    /*z-index: 10;*/
 }
 
     .search input {
         padding: 0.5rem;
         font-size: 1.5rem;
         background-color: #D5D8DC;
-        width: calc(100% - 2rem - 4px);
+        width: 100%;
+        border-radius: 4px;
     }
+
+    .search input:hover {
+        border-color: blue;
+    }
+
 
 .cardList {
     overflow-y: scroll;
     max-height: calc(100vh - 100px);
-    width: 250px;
-    /*width: 100%;*/
-    /*max-width: 250px;*/
-    z-index: 10;
+    /*width: 250px;*/
+    width: 100%;
+    max-width: 250px;
+    margin-top: 5px;
+    /*z-index: 10;*/
     background-color: transparent;
 }
 
-.card {
-    width: calc(100%-50px);
-    height: 50px;
-    padding-left: 0.5rem;
+    .cardList::-webkit-scrollbar {
+        width: 10px; /* width of the entire scrollbar */
+    }
+
+    .cardList::-webkit-scrollbar-track {
+        /*background: tarnsparent;*/ /* color of the tracking area */
+    }
+
+    .cardList::-webkit-scrollbar-thumb {
+        background-color: #D5D8DC; /* color of the scroll thumb */
+        border-radius: 10px; /* roundness of the scroll thumb */
+        border: 2px solid #272c36; /* creates padding around scroll thumb */
+    }
+
+li.list-group-item {
+    /*//width: calc(100%-50px);
+    //height: 50px;
+    padding-left: 0.5rem;*/
+    /*padding-right: 1rem;*/
     display: flex;
     justify-content: flex-start;
     align-items: center;
     background-color: #D5D8DC;
-    margin: 5px 0;
+    margin: 0 0 1px 0;
+    padding: 5px 5px;
     color: black;
     cursor: grab;
+    word-break: break-all;
+    height: 60px;
+    width: 240px;
 }
 
-.removeMaker {
-    right: 0.5rem;
+.markerName {
+    /*    padding-left: 2.8rem;
+    padding-right: 2.8rem;*/
+    height: 100%;
+    padding: 0 3rem 0 2.2rem
+}
+
+    .markerName p {
+        margin-bottom: 0;
+    }
+
+.dragIcon {
+    position: absolute;
+    left: 0.2rem;
+    /*top: 23px;*/
     background: none;
     border: none;
-    z-index: 10;
+    /*z-index: 10;*/
+}
+
+    .dragIcon img {
+        width: 30px;
+        cursor: grab;
+    }
+
+.removeMaker {
+    position: absolute;
+    right: 0.8rem;
+    /*top: 23px;*/
+    background: none;
+    border: none;
+    /*z-index: 10;*/
 }
 
 
     .removeMaker img {
         width: 30px;
         cursor: pointer;
+        background: none;
+        border: none;
     }
+
+.searchImg {
+    position: absolute;
+    right: 0.8rem;
+}
+    .searchImg img {
+        width: 30px;
+        cursor: pointer;
+        background: none;
+        border: none;
+    }
+
+
 
